Fix gap

--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -186,13 +186,15 @@
     .cp-app-profile-friend-request {
         flex: 0;
         white-space: normal;
-        margin-bottom: 0.5rem;
         svg {
             min-width: @variables_icon_width;
         }
     }
     .cp-app-profile-friend-request.btn-success {
         margin-right: 0.5rem;
+    }
+    .cp-app-profile-friend-request.btn-danger {
+        margin-top: 0.5rem;
     }
 
     // I tried using flexbox but messed with how the pencil icon was displayed
